Improve main page & styles, add unfinished order page

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,2 @@
-@import url('./styles/reset.sass')
-@import url('./styles/style.sass')
-@import url('./styles/main-page.sass')
-@import url('./styles/footer.sass')
+@import './styles/reset'
+@import './styles/main'
