--- a/src/components/MainPage/style.sass
+++ b/src/components/MainPage/style.sass
@@ -1,4 +1,4 @@
-@import '../../styles/variables'
+@import 'styles/variables'
 
 .hero
   height: 100vh
@@ -67,11 +67,6 @@
 
   color: #ffffff
 
-.search-tickets__form
-  max-width: 720px
-  padding: 80px 20px 50px
-  background-color: rgba(41, 41, 41, 0.69)
-
 .header__size_s
   margin-bottom: 15px
 
@@ -80,47 +75,6 @@
   line-height: 35px
 
   color: #FFFFFF
-
-.search-tickets__inputs-container
-  display: flex
-  align-items: center
-  gap: 40px
-
-  &.without-gap
-    gap: 0
-
-.search-tickets__block:not(:last-of-type)
-  margin-bottom: 60px
-
-.form__button_inverse
-  // padding: 0
-  // width: 24px
-  // height: 24px
-  padding: 0 8px
-  width: 40px
-  height: 24px
-
-  svg
-    width: 24px
-    height: 24px
-
-.tickets__form_btn_submit
-  border: 1px solid $orange
-  background-color: $orange
-  padding: 11px 41px
-  border-radius: 5px
-
-  margin-left: auto
-  margin-top: 90px
-  display: block
-
-  font-weight: 700
-  font-size: 24px
-  line-height: 28px
-  text-align: center
-  text-transform: uppercase
-
-  color: #292929
 
 .text_accent
   font-weight: 700
@@ -200,24 +154,24 @@
     @include media(desktop)
       width: 25%
 
-  &__button
-    border: 1px solid #fff
-    border-radius: 5px
-    padding: 15px 75px
+  // &__button
+  //   border: 1px solid #fff
+  //   border-radius: 5px
+  //   padding: 15px 75px
 
-    font-weight: 700
-    font-size: 24px
-    line-height: 28px
-    text-align: center
-    color: $white
+  //   font-weight: 700
+  //   font-size: 24px
+  //   line-height: 28px
+  //   text-align: center
+  //   color: $white
 
-    cursor: pointer
-    transition-duration: 0.3s
+  //   cursor: pointer
+  //   transition-duration: 0.3s
 
-    &:hover
-      border-color: $orange-pale-3
-      background-color: $orange-pale-3
-      color: $grey-dark-2
+  //   &:hover
+  //     border-color: $orange-pale-3
+  //     background-color: $orange-pale-3
+  //     color: $grey-dark-2
 
 .feature__icon
   & circle
