--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -4,7 +4,9 @@
 html,
 body
   font-family: 'Roboto', sans-serif
-  background-color: #fff
+  background-color: $white
+  word-break: break-word
+  height: 100%
 
 ul
   list-style-type: none
@@ -21,21 +23,33 @@ button
   border: none
   cursor: pointer
 
+#root
+  display: flex
+  flex-direction: column
+  height: 100%
+  & > div:first-child
+    flex: 1 0 auto
+  & > footer
+    flex-shrink: 0
+
+.header_size_m
+  font-weight: 500
+  font-size: 36px
+  text-transform: uppercase
+
+  color: $grey-dark-3
+
 .header_size_s
   font-weight: 500
   font-size: 30px
-  // line-height: 35px
 
 .header_size_xs
   font-weight: 500
   font-size: 24px
-  // line-height: 28px
   color: $black
 
-.header_size_l
-  font-weight: 500
-  font-size: 36px
-  line-height: 42px
+.uppercase
   text-transform: uppercase
 
-  color: #292929
+.arrow_left
+  transform: rotate(180deg)
