--- a/src/components/Footer/style.sass
+++ b/src/components/Footer/style.sass
@@ -1,33 +1,41 @@
-@import '../../styles/variables'
+@import 'styles/variables'
+@import 'styles/mixins'
 
 $color-typo-primary: $grey-light
 $color-typo-secondary: $white
+
 $color-bg-primary: $grey-dark-2
+$color-bg-input: $white
 $color-bg-btn-hover: $orange-pale-3
-$color-bg-btn-focus: $orange-pale-3
+$color-bg-social-hover: $orange-pale-3
 
-$breakpoint-tablet: 768px
-
-@media (min-width: $breakpoint-tablet)
-
-@media (max-width: $breakpoint-tablet + 1px)
+$color-border-primary: $grey-light
 
 .footer
-  --select-color: #ffa800
-
   background-color: $color-bg-primary
   color: $color-typo-primary
-  white-space: pre-wrap
+  @include from(laptop)
+    white-space: pre-wrap
 
   &__contacts
-    display: flex
-
     max-width: 1320px
     margin: 0 auto
     padding: 50px
 
+    @include media(mobile)
+      padding: 15px
+      padding-block: 30px
+
+    @include media(tablet)
+      padding: 30px
+
+    @include from(laptop)
+      display: flex
+      gap: 20px
+
   &__contacts > div
-    width: 50%
+    @include from(laptop)
+      width: 50%
 
   &__header
     color: $color-typo-secondary
@@ -41,10 +49,13 @@ $breakpoint-tablet: 768px
 .subscription__text
   margin-bottom: 15px
 
-  font-size: 24px
-  line-height: 28px
+  font-size: 1.5rem
 
   color: $color-typo-primary
+
+.contacts
+  @include to(tablet)
+    margin-bottom: 44px
 
 .contacts__item
   display: flex
@@ -53,8 +64,6 @@ $breakpoint-tablet: 768px
     margin-bottom: 30px
 
 .contact__icon
-  height: 30px
-
   &_wrapper
     display: flex
     justify-content: center
@@ -63,9 +72,12 @@ $breakpoint-tablet: 768px
     height: 30px
     margin-right: 35px
 
+  &_content
+    width: 30px
+    height: 30px
+
 .contact__text
-  font-size: 24px
-  line-height: 28px
+  font-size: 1.5rem
 
 .subscription__form_container
   margin-bottom: 44px
@@ -73,24 +85,27 @@ $breakpoint-tablet: 768px
 .input__container
   width: 100%
   display: flex
-  background-color: #ffffff
+  background-color: $color-bg-input
   border-radius: 3px
-  padding: 16px 21px
 
 .form__input
-  // background-color: #ffffff
   border: none
-  // border-radius: 3px
-  // padding: 16px 21px
   width: 100%
   outline: none
 
-  font-size: 24px
+  font-size: 1.5rem
+  padding: 16px 21px
+  background-color: transparent
 
 .subscription__form
   display: flex
   gap: 32px
   width: 100%
+
+  @include to(laptop)
+    flex-direction: column
+    align-items: flex-start
+    gap: 20px
 
 .socials
   &__list
@@ -100,12 +115,19 @@ $breakpoint-tablet: 768px
     cursor: pointer
 
     &:hover svg
-      fill: $color-bg-btn-hover
+      fill: $color-bg-social-hover
 
     &:not(:last-child)
       margin-right: 48px
 
+      @include media(mobile)
+        margin-right: 22px
+
+      @include media(tablet, laptop)
+        margin-right: 40px
+
 .social__icon
+  transition: .25s
   fill: $color-typo-primary
 
 .footer__logo_section
@@ -113,12 +135,18 @@ $breakpoint-tablet: 768px
   justify-content: space-between
   align-items: center
 
-  max-width: 1400px
+  max-width: 1500px
   margin-inline: auto
   padding-block: 22px 33px
 
+  @include media(mobile)
+    padding-inline: 15px
+
+  @include from(tablet)
+    padding-inline: 50px
+
   &_wrapper
-    border-top: 1px solid #e5e5e5
+    border-top: 1px solid $color-border-primary
 
 .button_scroll-up
   display: flex
@@ -130,3 +158,8 @@ $breakpoint-tablet: 768px
 
   border: 1px solid $color-typo-primary
   border-radius: 50%
+
+.footer__copyright
+  font-size: 1.5rem
+  font-weight: 300
+  color: $color-typo-primary
