--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -8,44 +8,16 @@ $grey-dark-3: #292929
 $black: #000
 $orange-1: #ffa800
 $orange-2: #FDC354
+$orange-3: #ffb31f
 $orange-pale-1: #FCDC9D
 $orange-pale-2: #FFD98F
 $orange-pale-3: #FFCA62
 $violet-light-1: #F4F3F6
 $violet-light-2: #E4E0E9
+$violet-light-3: #F7F5F9
 $green-light: #B2F6A1
 
 $padding-inline-section: 50px
 $max-width-section: 1420px + $padding-inline-section * 2
 
-@mixin stretch-on-parent
-  position: absolute
-  top: 0
-  right: 0
-  bottom: 0
-  left: 0
-
-@mixin section-width
-  padding-inline: $padding-inline-section
-  max-width: $max-width-section
-  margin-inline: auto
-
-@mixin media($keys...)
-  @each $key in $keys
-    @if ($key == mobile)
-      @media (max-width: 480px)
-        @content
-
-    @else if ($key == tablet)
-      @media (min-width: 481px) and (max-width: 768px)
-        @content
-
-    @else if ($key == desktop)
-      @media screen and (min-width: 769px)
-        @content
-
-// $color-bg-primary: $grey-dark-2
-// $color-bg-orange: #ffa800
-// $color-bg-colored-hover: $orange-pale-3
-// $color-typo-primary: $grey-light
-// $color-typo-light-secondary: $white
+$breakpoints: (mobile: 480px, tablet: 768px, laptop: 1024px, desktop: 1200px, widescreen: null)
