Add ChoosePlacesStep and other unfinished steps, improve styles
And also improve stepper styles

--- a/src/components/Footer/style.sass
+++ b/src/components/Footer/style.sass
@@ -1,7 +1,7 @@
 @import 'styles/variables'
 @import 'styles/mixins'
 
-$color-typo-primary: $grey-light
+$color-typo-primary: $grey-light-2
 $color-typo-secondary: $white
 
 $color-bg-primary: $grey-dark-2
@@ -9,7 +9,7 @@ $color-bg-input: $white
 $color-bg-btn-hover: $orange-pale-3
 $color-bg-social-hover: $orange-pale-3
 
-$color-border-primary: $grey-light
+$color-border-primary: $grey-light-2
 
 .footer
   background-color: $color-bg-primary
