--- a/src/components/OrderPage/TicketList/style.sass
+++ b/src/components/OrderPage/TicketList/style.sass
@@ -25,6 +25,8 @@
   display: block
   width: 52px
   height: 52px
+  fill: $white
+
   &_wrapper
     display: inline-block
     border: 2px solid #FFFFFF
@@ -57,11 +59,14 @@
   margin: 0 auto
 
 .trip__point_time
+  margin-bottom: 3px
+
   font-weight: 700
   font-size: 24px
   color: #000000
 
 .trip__point_city
+  margin-bottom: 3px
 
 .trip__point_station
   font-size: 16px
