--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,7 +1,11 @@
 $white: #fff
-$grey-light: #e5e5e5
+$grey-light-1: #f2f2f2
+$grey-light-2: #e5e5e5
+$grey-light-3: #d5d5d5
+$grey-light-4: #cccccc
 $grey-1: #C4C4C4
 $grey-2: #928F94
+$grey-3: #a1a1a1
 $grey-dark-1: #3E3C41
 $grey-dark-2: #2d2b2f
 $grey-dark-3: #292929
