--- a/src/components/Button/style.sass
+++ b/src/components/Button/style.sass
@@ -4,7 +4,7 @@
   width: 100%
   max-width: 325px
   padding-inline: 15px
-  border: 1px solid
+  border: 1px solid transparent
   border-radius: 5px
 
   font-size: 24px
