--- a/src/components/Header/style.sass
+++ b/src/components/Header/style.sass
@@ -1,17 +1,21 @@
 @import 'styles/variables'
 
+$color-typo-primary: $grey-dark-3
+$color-typo-secondary:  $black
+$font-weight-primary: 500
+
 .header_size_m
-  font-weight: 500
-  font-size: 2.25rem
+  font-weight: $font-weight-primary
+  font-size: 2.25rem // 36px
   text-transform: uppercase
 
-  color: $grey-dark-3
+  color: $color-typo-primary
 
 .header_size_s
-  font-weight: 500
-  font-size: 1.875rem
+  font-weight: $font-weight-primary
+  font-size: 1.875rem // 30px
 
 .header_size_xs
-  font-weight: 500
-  font-size: 24px
-  color: $black
+  font-weight: $font-weight-primary
+  font-size: 1.5rem // 24px
+  color: $color-typo-secondary
