Add FilterDetailsInfo component with finished styles, improve inputs
and so on

--- a/src/components/Footer/style.sass
+++ b/src/components/Footer/style.sass
@@ -75,27 +75,13 @@ $color-border-primary: $grey-light-2
   &_content
     width: 30px
     height: 30px
+    fill: #e5e5e5
 
 .contact__text
   font-size: 1.5rem
 
 .subscription__form_container
   margin-bottom: 44px
-
-.input__container
-  width: 100%
-  display: flex
-  background-color: $color-bg-input
-  border-radius: 3px
-
-.form__input
-  border: none
-  width: 100%
-  outline: none
-
-  font-size: 1.5rem
-  padding: 16px 21px
-  background-color: transparent
 
 .subscription__form
   display: flex
