Improve RangeSlider, finish ticket filter styles
could be better, though could be worse

--- a/src/components/Input/style.sass
+++ b/src/components/Input/style.sass
@@ -38,12 +38,11 @@ $color-bg-input: $white
     position: absolute
     top: 0
     bottom: 0
-    /* right: 0; */
     width: 100%
     display: flex
     align-items: center
     background: white
-    color: grey
+    color: #E5E5E5
     pointer-events: none
 
   &::placeholder
