--- a/src/components/OrderPage/TicketList/style.sass
+++ b/src/components/OrderPage/TicketList/style.sass
@@ -56,7 +56,11 @@
 
 .trip__direction_icon
   display: block
+  height: 20px
+  width: 30px
   margin: 0 auto
+
+  fill: #FFA800
 
 .trip__point_time
   margin-bottom: 3px
