--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -170,17 +170,20 @@ $color-border-primary: $grey-light-2
     color: $color-typo-grey-primary
     font-weight: 300
 
-.ticket-details__form
+.ticket-filter__form
   padding-block: 15px
 
-.ticket-filter__form_label
-  display: block
+  &_dates
+    padding-block: 10px
 
-.ticket-filter__form_label:not(:last-child)
-  margin-bottom: 25px
+  &_label
+    display: block
 
-.ticket-filter__title
-  margin-bottom: 15px
+    &:not(:last-child)
+      margin-bottom: 25px
+
+  &_title
+    margin-bottom: 15px
 
 .form__switch_list
   padding-left: 35px
@@ -206,7 +209,7 @@ $color-border-primary: $grey-light-2
     background: #fff
     border-radius: 10px
     @include stretch-on-parent
-    // transition-duration: .5s
+    transition-duration: .1s
 
     &::before
       content: ''
@@ -216,14 +219,14 @@ $color-border-primary: $grey-light-2
       height: 28px
       background: #C4C4C4
       border-radius: 50%
+      transition-duration: .15s
 
   &:checked + .input_checkbox_slider
     background: #FCDC9D
 
     &::before
       background: #FFA800
-      left: auto
-      right: 0
+      left: calc(100% - 28px)
 
 .checkbox
   &__label
@@ -248,12 +251,68 @@ $color-border-primary: $grey-light-2
       height: 20px
       margin-right: 35px
 
-.range-slider
-  margin-bottom: 60px
+.range-slider__container
+  display: flex
+  flex-direction: column
+  gap: 60px
 
+  margin-top: 20px
+  margin-bottom: 45px
+
+.range-slider
   &__from-and-to
     display: flex
     justify-content: space-between
     font-size: 18px
     color: $color-typo-white-primary
-    margin-block: 10px 3px
+    margin-bottom: 10px
+
+  &__title
+    font-size: 1.5rem
+    color: #E5E5E5
+    margin-bottom: 20px
+
+    &_right
+      text-align: right
+
+  .rc-slider
+    padding: 0
+
+    &-handle
+      z-index: 3
+
+  &__size_l
+    .rc-slider
+      height: 19px
+      width: calc(100% - 24px)
+      margin-inline: 12px
+
+    .rc-slider-rail
+      width: calc(100% + 24px)
+      left: -12px
+
+  &__size_s
+    .rc-slider
+      height: 10px
+      width: calc(100% - 18px)
+      margin-inline: 9px
+
+    .rc-slider-rail
+      width: calc(100% + 18px)
+      left: -9px
+
+  .rc-slider-mark
+    top: auto
+    bottom: 0
+
+.rc-slider-mark-text
+  white-space: nowrap
+  top: 10px
+
+.rc-slider-handle-dragging
+  box-shadow: 0 0 0 5px $orange-pale-2 !important
+
+.rc-slider-mark-text-active
+  background-color: rgba(62, 60, 65, 0.8)
+  box-shadow: 0 0 6px 3px rgb(62 60 65 / 80%)
+  z-index: 1
