Add PaymentStep & CheckStep markup and styles, finish Ticket styles

--- a/src/components/OrderPage/OrderBlock/style.sass
+++ b/src/components/OrderPage/OrderBlock/style.sass
@@ -1,29 +1,44 @@
 @import 'styles/variables'
 
+$color-typo-primary: $grey-dark-3
+$color-bg-primary: $white
+$color-bg-secondary: #F9F9F9
+$color-border-primary: $grey-1
+$color-border-secondary: $grey-2
+
 .order__block_container
-  background: #FFFFFF
-  border: 1px solid #C4C4C4
+  background: $color-bg-primary
+  border: 1px solid $color-border-primary
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25)
 
-.order__block_item
+  &:not(:last-child)
+    margin-bottom: 45px
 
 .order__block_header
-  background: #F9F9F9
-  border-bottom: 1px dashed #928F94
+  background: $color-bg-secondary
+  border-bottom: 1px dashed $color-border-secondary
   padding: 35px
+
+  &_title
+    font-size: 1.875rem // 30px
+    color: $color-typo-primary
 
 .order__block_section
   border-bottom: 0px
-  padding-inline: 35px
-  padding-block: 40px 50px
+  // padding-inline: 35px
+  // padding-block: 40px 50px
+  padding: 40px 35px
 
-.payment__form_block
+  &:not(:last-child)
+    border-bottom: 1px dashed $color-border-secondary
+
+.order__block_row
   display: flex
   justify-content: space-between
   gap: 25px
-  
-.payment__form_block:not(:last-child)
-  margin-bottom: 45px
+
+  &:not(:last-child)
+    margin-bottom: 45px
 
 .order__block_item:not(:last-child)
-  border-bottom: 1px dashed #928F94
+  border-bottom: 1px dashed $color-border-secondary
