--- a/src/components/OrderPage/OrderInput/style.sass
+++ b/src/components/OrderPage/OrderInput/style.sass
@@ -19,3 +19,49 @@
     font-size: 1rem
     color: #292929
     margin-bottom: 12px
+
+.order__checkbox
+  display: flex
+  align-items: center
+  font-size: 1.5rem
+  color: #928F94
+
+  cursor: pointer
+
+  &_input_box
+    position: relative
+
+    display: flex
+    justify-content: center
+    align-items: center
+
+    width: 28px
+    height: 28px
+    border: 1px solid #928F94
+    border-radius: 5px
+
+  &_input
+    position: absolute
+    width: 0
+    height: 0
+
+    &_checked-icon
+      display: none
+
+      .icon
+        width: 23px
+        height: 18px
+        fill: #FFA800
+
+    &:checked + .order__checkbox_input_box
+      border-color: #FFA800
+
+      .order__checkbox_input_checked-icon
+        display: block
+
+    &:checked ~ .order__checkbox_text
+      color: #FFA800
+
+.order__checkbox_text
+  display: block
+  margin-left: 20px
