--- a/src/components/OrderPage/style.sass
+++ b/src/components/OrderPage/style.sass
@@ -121,6 +121,7 @@ $height-stepper: 95px
 .order-page__main
   flex: 1
   max-width: 960px
+  margin-bottom: 120px
 
 //   &::before
 //     content: ''
@@ -241,3 +242,12 @@ $height-stepper: 95px
 
     &:not(:last-child)
       margin-right: 0.5em
+
+.button__next-step
+  display: block
+  // max-width: 220px
+  max-width: 320px
+  margin-top: 100px
+  margin-left: auto
+
+  text-transform: uppercase
