--- a/src/components/Ticket/style.sass
+++ b/src/components/Ticket/style.sass
@@ -9,8 +9,11 @@
   &:not(:last-child)
     margin-bottom: 50px
 
+  &_checking
+    border: none
+
 .ticket__main-info
-  width: 20%
+  flex: 1
   background-color: #E4E0E9
   padding-block: 10px
   display: flex
@@ -19,7 +22,10 @@
 
   &_header
     margin-bottom: 15px
-    padding-left: 42px
+    padding-inline: 25px 50px
+    display: flex
+    flex-direction: column
+    align-items: center
 
 .ticket__train-icon
   display: block
@@ -34,10 +40,14 @@
     padding: 17px
     margin-bottom: 15px
 
+.ticket__header
+  font-weight: 700
+  color: #3E3C41
+
 .ticket__directions
+  width: 50%
   padding: 50px 40px
   border-right: 1px dashed #E5E5E5
-  width: 50%
 
 .direction
   display: flex
@@ -46,8 +56,13 @@
     margin-bottom: 65px
 
 .ticket__places
-  width: 30%
+  width: 100%
+  max-width: 280px
   padding: 40px 20px 20px 25px
+  display: flex
+  flex-direction: column
+  gap: 25px
+  justify-content: space-between
 
 .trip__duration
   font-size: 18px
@@ -66,27 +81,56 @@
   margin-bottom: 3px
 
   font-weight: 700
-  font-size: 24px
+  font-size: 1.5rem
   color: #000000
 
 .trip__point_city
   margin-bottom: 3px
+  font-size: 1.125rem
+  color: #292929
 
 .trip__point_station
-  font-size: 16px
-  color: grey
+  font-size: 1rem
+  color: #928F94
 
-.trip__point
+.ticket__trip-points
+  padding-inline: 25px
+
+  &_item
+    color: #292929
+
+    &_train-start
+      color: #928F94
 
 .trip__places_item
   display: flex
   align-items: baseline
+  font-size: 16px
+
+.ticket__places_features
+  display: flex
+  justify-content: flex-end
+  gap: 16px
+
+  padding-inline: 6px
+
+.ticket__places_feature_icon
+  width: 20px
+  height: 20px
+  display: flex
+
+  .icon
+    fill: #C4C4C4
 
 .place__type
-  font-size: 16px
+  flex-basis: 40%
   color: #3E3C41
 
 .place__quantity
+  flex: 0 1 30px
+
+  margin-right: 0.25em
+
   font-weight: 500
   font-size: 16px
   color: #FFA800
@@ -99,12 +143,12 @@
   color: #928F94
   margin-right: 0.25em
 
-span.place__price_amount
+.place__price_amount
   font-weight: 700
   font-size: 24px
   color: #2D2B2F
   margin-right: 0.25em
 
 .place__price_currency
-  font-size: 24px
-  color: grey
+  font-size: 1.5rem
+  color: #928F94
