--- a/src/components/OrderPage/OrderInput/style.sass
+++ b/src/components/OrderPage/OrderInput/style.sass
@@ -13,6 +13,13 @@
   border-radius: 5px
   max-width: 360px
   width: 100%
+  font-size: 1.5rem
+  color: #292929
+
+  // &:focus, &:active
+  //   border-color: #FFA800
+  &::placeholder
+    color: #C4C4C4
 
   &_label
     display: block
@@ -23,9 +30,6 @@
 .order__checkbox
   display: flex
   align-items: center
-  font-size: 1.5rem
-  color: #928F94
-
   cursor: pointer
 
   &_input_box
@@ -65,3 +69,11 @@
 .order__checkbox_text
   display: block
   margin-left: 20px
+  // color: #928F94
+  color: #292929
+
+  &_size_m
+    font-size: 1.5rem
+
+  &_size_s
+    font-size: 1.125rem
