--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -25,9 +25,14 @@ a
   text-decoration: none
 
 button
+  font-family: 'Roboto', sans-serif
   background: transparent
   border: none
   cursor: pointer
+  padding: 0
+
+input
+  font-family: 'Roboto', sans-serif
 
 #root
   display: flex
@@ -42,5 +47,4 @@ button
   text-transform: uppercase
 
 .arrow_left
-  // transform: rotate(180deg)
   transform: matrix(-1, 0, 0, 1, 0, 0)
