--- a/src/components/OrderPage/OrderBlock/style.sass
+++ b/src/components/OrderPage/OrderBlock/style.sass
@@ -15,9 +15,12 @@ $color-border-secondary: $grey-2
     margin-bottom: 45px
 
 .order__block_header
-  background: $color-bg-secondary
-  border-bottom: 1px dashed $color-border-secondary
   padding: 35px
+  transition: 0.2s
+
+  &:not(:last-child)
+    background: $color-bg-secondary
+    border-bottom: 1px dashed $color-border-secondary
 
   &_title
     font-size: 1.875rem // 30px
