--- a/src/components/OrderPage/OrderStep/style.sass
+++ b/src/components/OrderPage/OrderStep/style.sass
@@ -5,8 +5,14 @@
 
   width: 32px
   height: 32px
-  border: 2px solid #928F94
+  border: 2px solid #FFA800
   border-radius: 50%
+  margin-right: 15px
+
+  transition: .1s linear
+
+  &:hover, &.expanded:hover
+    border-color: transparent
 
   &_icon
     width: 18px
@@ -14,8 +20,77 @@
     .icon
       fill: #FFA800
 
-.passenger-form__button_remove_icon
-  width: 12px
+  &.expanded
+    border-color: #928F94
+
+    .icon
+      stroke: #928F94
+
+.passenger-form__button_remove
+  margin-left: auto
+
+  &_icon
+    width: 12px
+
+    .icon
+      fill: #928F94
+
+.passenger-form__button_add
+  margin-left: auto
+  transition: .2s linear
+
+  &:hover
+    transform: scale(1.2)
+
+  &_icon
+    width: 18px
+    height: 18px
+
+    .icon
+      fill: #FFA800
+
+.passenger-form__header_content
+  display: flex
+  align-items: center
+
+.form__footer
+  &.validated
+    background: #B2F6A1
+
+  &.unvalidated
+    background: rgba(255, 61, 0, 0.38)
+
+  &_content
+    display: flex
+    align-items: flex-start
+
+    .form__button
+      margin-left: auto
+
+  &_validation-info
+    display: flex
+    align-items: center
+    gap: 15px
+
+    &_text
+      font-size: 18px
+      color: #FFFFFF
+
+    &_icon
+      display: flex
+
+      width: 32px
+      height: 32px
+      padding: 10px
+
+      background: #F9FEF7
+      border-radius: 50%
+
+      &.validated .icon
+        fill: #B2F6A1
+
+      &.unvalidated .icon
+        fill: rgba(255, 61, 0, 0.38)
 
 .check-step__header
   padding: 30px
@@ -28,6 +103,10 @@
     flex: 1
     padding-block: 30px 60px
 
+  &_row
+    &:not(:last-child)
+      border-bottom: 1px dashed #E5E5E5
+
   &_aside
     max-width: 280px
     width: 100%
@@ -36,10 +115,6 @@
     flex-direction: column
     justify-content: flex-end
     padding: 25px
-
-.check-step__section_row
-  &:not(:last-child)
-    border-bottom: 1px dashed #E5E5E5
 
 .check-step__passenger_item
   display: flex
@@ -124,3 +199,152 @@
 
   &__label
     cursor: pointer
+
+// gender input //
+
+.passenger-form__fieldset
+  max-width: 200px
+
+.passenger-form__radio
+  &_container
+    display: flex
+    max-width: 200px
+
+  &_label
+    display: block
+    flex-basis: 50%
+    height: 50px
+    cursor: pointer
+
+  &_input
+    position: absolute
+    width: 0
+    height: 0
+
+  &_text
+    display: flex
+    justify-content: center
+    align-items: center
+    height: 100%
+    font-weight: 900
+    font-size: 30px
+    line-height: 35px
+    text-transform: uppercase
+    color: #000000
+    border: 1px solid #928F94
+    user-select: none
+
+    input:checked + &
+      background: #FFA800
+
+.passenger-form__radio_label:first-child .passenger-form__radio_text
+  border-top-left-radius: 5px
+  border-bottom-left-radius: 5px
+  border-right: none
+
+.passenger-form__radio_label:last-child .passenger-form__radio_text
+  border-top-right-radius: 5px
+  border-bottom-right-radius: 5px
+
+.passenger-form__select
+  width: 280px
+  flex-shrink: 0
+
+  .select__button
+    background: white
+    padding-inline: 15px
+    border: 1px solid #928F94
+    border-radius: 5px
+    height: 50px
+    font-size: 24px
+
+    &::after
+      position: absolute
+      right: 22px
+      top: calc(50% - 2px)
+      content: ""
+      border-top: 4px solid #928F94
+      border-inline: 6px solid transparent
+
+  .select__options
+    border-radius: 5px
+
+    &.show
+      filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.2))
+      background: #F4F3F6
+
+  .select__options_item
+    padding-inline: 15px
+    height: 50px
+    display: flex
+    align-items: center
+    font-size: 24px
+    color: #292929
+    border: 1px solid transparent
+
+    &:first-child
+      border-radius: 5px 5px 0 0
+
+    &:last-child
+      border-radius: 0 0 5px 5px
+
+.results
+  &__info
+    display: flex
+    align-items: baseline
+
+    margin-bottom: 45px
+
+    font-size: 18px
+
+    color: #928F94
+
+  &__amount
+    flex-basis: 50%
+
+  &__sort-by
+    margin-right: 10px
+    display: flex
+    align-items: baseline
+    flex-shrink: 0
+    flex-basis: 300px
+
+    &_select
+      margin-left: 0.25em
+
+      .select__button
+        font-size: 18px
+        padding: 5px
+
+      .select__options
+        width: 140px
+        background: #F7F5F9
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+
+        &.show
+          left: -1px
+
+      .select__options_item
+        padding: 5px
+
+.results__amount-per-page
+  flex-shrink: 0
+
+.results__amount-per-page_inputs
+  display: inline
+  margin-left: 0.5em
+
+.amount-per-page__input
+  position: absolute
+  width: 0
+  height: 0
+
+  &:checked + .amount-per-page__input_span
+    color: black
+
+  &_label
+    user-select: none
+    cursor: pointer
+
+    &:not(:last-child)
+      margin-right: 0.5em
