--- a/src/components/Input/style.sass
+++ b/src/components/Input/style.sass
@@ -33,7 +33,7 @@ $color-bg-input: $white
   background: transparent
   position: relative
 
-  &[type="date"]
+  &[type="date"][value=""]
     text-transform: uppercase
 
     &:not(:focus)::before
@@ -68,3 +68,10 @@ input[type="date"]::-webkit-calendar-picker-indicator
     display: block
     height: 50%
     fill: #E5E5E5
+
+.date-input__wrapper
+  width: 100%
+  position: relative
+  display: flex
+  flex-direction: column
+  align-items: center
