Add store, some logic & requests for basic search and last tickets

--- a/src/components/OrderPage/style.sass
+++ b/src/components/OrderPage/style.sass
@@ -153,19 +153,20 @@ $height-stepper: 95px
     justify-content: space-between
     margin-bottom: 30px
 
+  &__station
     &_to
       text-align: right
       width: 40%
 
-  &__station
-    font-size: 16px
-    line-height: 19px
-    color: #928F94
+    &_city
+      font-size: 20px
+      color: #292929
+      margin-bottom: 5px
 
-  &__city
-    font-size: 20px
-    color: #292929
-    margin-bottom: 5px
+    &_name
+      font-size: 16px
+      line-height: 19px
+      color: #928F94
 
   &__info
     display: flex
