--- a/src/components/Ticket/style.sass
+++ b/src/components/Ticket/style.sass
@@ -52,8 +52,12 @@
 .direction
   display: flex
   gap: 40px
+
   &:not(:last-child)
     margin-bottom: 65px
+
+  &_reversed
+    flex-direction: row-reverse
 
 .ticket__places
   width: 100%
