Add query params & search functionality

--- a/src/components/Select/style.sass
+++ b/src/components/Select/style.sass
@@ -12,7 +12,8 @@
 
     &:active,
     &:focus,
-    &:hover
+    &:hover,
+    &[aria-selected="true"]
       background: #FFCA62
       color: #FFFFFF
       cursor: pointer
@@ -20,6 +21,7 @@
 .select__button
   width: 100%
   position: relative
+  outline: none
   text-align: left
   color: #292929
 
