Add DatePicker functionality
Maybe with some bugz

--- a/src/components/DatePicker/style.sass
+++ b/src/components/DatePicker/style.sass
@@ -32,6 +32,7 @@
   padding-block: 15px
   font-size: 32px
   text-transform: capitalize
+  color: #333333
 
 .rdp-nav_button_custom
   position: relative
