--- a/src/components/OrderPage/OrderStep/ChoosePlacesStep/style.sass
+++ b/src/components/OrderPage/OrderStep/ChoosePlacesStep/style.sass
@@ -185,6 +185,7 @@ $color-bg-train: $orange-1
     font-size: 1.125rem // 18px
     color: #292929
     padding-left: 0.25em
+    width: 100%
 
     &_label
       position: relative
@@ -200,6 +201,8 @@ $color-bg-train: $orange-1
       cursor: text
 
     &_text
+      display: block
+      flex-shrink: 0
       font-size: 1.125rem // 18px
       color: #292929
 
