Add ticket amount inputs functionality

--- a/src/components/OrderPage/OrderStep/ChoosePlacesStep/style.sass
+++ b/src/components/OrderPage/OrderStep/ChoosePlacesStep/style.sass
@@ -203,7 +203,8 @@ $color-bg-train: $orange-1
     &_text
       display: block
       flex-shrink: 0
-      font-size: 1.125rem // 18px
+      // font-size: 1.125rem // 18px
+      font-size: 1rem // 16px
       color: #292929
 
 // .Grey.tmp
