--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -43,6 +43,14 @@ input
   & > footer
     flex-shrink: 0
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button
+  -webkit-appearance: none
+  margin: 0
+
+input[type=number]
+  -moz-appearance: textfield
+
 .uppercase
   text-transform: uppercase
 
