--- a/src/components/OrderPage/style.sass
+++ b/src/components/OrderPage/style.sass
@@ -162,6 +162,7 @@ $height-stepper: 95px
       font-size: 20px
       color: #292929
       margin-bottom: 5px
+      text-transform: capitalize
 
     &_name
       font-size: 16px
@@ -171,6 +172,7 @@ $height-stepper: 95px
   &__info
     display: flex
     justify-content: space-between
+    align-items: baseline
 
   &__icons
     display: flex
