--- a/src/components/OrderPage/OrderStep/ChoosePlacesStep/style.sass
+++ b/src/components/OrderPage/OrderStep/ChoosePlacesStep/style.sass
@@ -53,6 +53,7 @@ $color-bg-train: $orange-1
   &__ticket-info
     background: #F7F6F6
     display: flex
+    align-items: center
 
   &__header
     margin-top: 35px
@@ -108,6 +109,15 @@ $color-bg-train: $orange-1
   font-weight: 700
   color: #3E3C41
 
+.directions
+  padding: 15px 35px
+  border-inline: 1px solid white
+
+.trip__duration_container
+  display: flex
+  flex-direction: column
+  justify-content: center
+
 .train-info__train-icon
   margin: auto
   width: 15px
@@ -139,7 +149,7 @@ $color-bg-train: $orange-1
     gap: 25px
     flex: 1
 
-    padding-inline: 35px
+    padding: 15px 35px
 
   &_time
     flex: 1
