--- a/src/components/Ticket/style.sass
+++ b/src/components/Ticket/style.sass
@@ -92,6 +92,7 @@
   margin-bottom: 3px
   font-size: 1.125rem
   color: #292929
+  text-transform: capitalize
 
 .trip__point_station
   font-size: 1rem
@@ -99,6 +100,7 @@
 
 .ticket__trip-points
   padding-inline: 25px
+  text-transform: capitalize
 
   &_item
     color: #292929
