Add unfinished passenger forms functionality

--- a/src/components/OrderPage/OrderInput/style.sass
+++ b/src/components/OrderPage/OrderInput/style.sass
@@ -21,6 +21,14 @@
   &::placeholder
     color: #C4C4C4
 
+  &.invalid
+    border-color: #ff6c3d
+    color: #ff6433
+
+    &::placeholder
+      color: #ff6c3d
+      opacity: 0.5
+
   &_label
     display: block
     font-size: 1rem
