--- a/src/components/OrderPage/style.sass
+++ b/src/components/OrderPage/style.sass
@@ -107,6 +107,7 @@ $height-stepper: 95px
   max-width: 1360px
   width: 100%
   margin: 0 auto
+  margin-bottom: 50px
   padding-top: 95px
 
   @include section-width
