--- a/src/components/Button/style.sass
+++ b/src/components/Button/style.sass
@@ -17,8 +17,11 @@
 
   &:disabled
     background: $grey-2
-  &:hover
+    cursor: auto
+
+  &:hover:not(:disabled)
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+
   &_size
     &_s
       height: 40px
