Add minimum order creating functionality, fix some styles & absence of keys

--- a/src/components/MainPage/style.sass
+++ b/src/components/MainPage/style.sass
@@ -2,7 +2,8 @@
 @import 'styles/mixins'
 
 .hero
-  height: 100vh
+  // height: 100vh
+  min-height: calc(100vh - 100px)
   border-bottom: 8px solid #ffa800
 
   background-image: url("/assets/train_background.png")
