--- a/src/components/OrderPage/OrderInput/style.sass
+++ b/src/components/OrderPage/OrderInput/style.sass
@@ -16,6 +16,9 @@
   font-size: 1.5rem
   color: #292929
 
+  &_size_s
+    max-width: 240px
+
   // &:focus, &:active
   //   border-color: #FFA800
   &::placeholder
@@ -34,6 +37,11 @@
     font-size: 1rem
     color: #292929
     margin-bottom: 12px
+
+.letter-spacing
+  letter-spacing: 0.25em
+  &::placeholder
+    letter-spacing: normal
 
 .order__checkbox
   display: flex
