--- a/src/components/OrderPage/OrderStep/PassengersStep/style.sass
+++ b/src/components/OrderPage/OrderStep/PassengersStep/style.sass
@@ -146,6 +146,9 @@
   border-top-right-radius: 5px
   border-bottom-right-radius: 5px
 
+.document-type
+  width: auto
+
 .passenger-form__select
   width: 280px
   flex-shrink: 0
@@ -155,7 +158,8 @@
     padding-inline: 15px
     border: 1px solid #928F94
     border-radius: 5px
-    height: 50px
+    // height: 50px
+    min-height: 50px
     font-size: 24px
 
     &::after
@@ -175,7 +179,8 @@
 
   .select__options_item
     padding-inline: 15px
-    height: 50px
+    // height: 50px
+    min-height: 50px
     display: flex
     align-items: center
     font-size: 24px
