--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -71,6 +71,9 @@ $color-border-primary: $grey-light-2
   line-height: 1.2
   text-align: right
 
+  &_city
+    text-transform: capitalize
+
 .ticket-details__trip-duration
   font-size: 1.125rem
   color: $color-typo-grey-primary
