--- a/src/components/PageHeader/style.sass
+++ b/src/components/PageHeader/style.sass
@@ -18,8 +18,9 @@
 
     cursor: pointer
 
-    // &:hover
-    //   background-color: #333333
+    &:hover .menu-link
+      color: #ffa800
 
 .menu-link
   color: #ffffff
+  transition: 0.25s
