--- a/src/components/SuccessPage/style.sass
+++ b/src/components/SuccessPage/style.sass
@@ -171,7 +171,7 @@ $color-border-star: $white
     &:first-of-type
       margin-bottom: min(4.5vmax, 90px)
 
-.order-information__title
+h3.order-information__title
   margin-bottom: 2.5vmax
   text-transform: none
 
@@ -216,6 +216,8 @@ $color-border-star: $white
   path
     stroke: $color-border-star
     stroke-width: 2px
+  &.filled
+    fill: $color-border-star
 
 .success-page__button.success-page__button
   width: auto
