--- a/src/components/Modal/style.sass
+++ b/src/components/Modal/style.sass
@@ -24,6 +24,7 @@ $color-border-secondary: $grey-2
 
 .modal
   max-width: 670px
+  width: 100%
   border: 1px solid $color-border-primary
 
   background: $color-bg-modal-primary
