Add Logo as separated component, fix styles in MainPage

--- a/src/components/Footer/style.sass
+++ b/src/components/Footer/style.sass
@@ -145,6 +145,18 @@ $color-border-primary: $grey-light-2
   border: 1px solid $color-typo-primary
   border-radius: 50%
 
+  transition: 0.25s
+  outline: none
+
+  path
+    transition: 0.25s
+
+  &:hover
+    border-color: #FFCA62
+
+    path
+      fill: #FFCA62
+
 .footer__copyright
   font-size: 1.5rem
   font-weight: 300
