--- a/src/components/SearchTicketsForm/style.sass
+++ b/src/components/SearchTicketsForm/style.sass
@@ -6,6 +6,7 @@
 .form__square
   max-width: 720px
   padding: 80px 20px 50px
+  flex-shrink: 0
 
   .tickets__form_block:not(:last-of-type)
     margin-bottom: 60px
