--- a/src/components/MainPage/style.sass
+++ b/src/components/MainPage/style.sass
@@ -2,44 +2,29 @@
 @import 'styles/mixins'
 
 .hero
-  // height: 100vh
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  flex-shrink: 0
+  gap: 50px
+
   min-height: calc(100vh - 100px)
   border-bottom: 8px solid #ffa800
 
   background-image: url("/assets/train_background.png")
   background-size: cover
   background-color: #ffa800
-  display: flex
-  flex-direction: column
-  justify-content: space-between
-
-.logo
-  font-weight: 900
-  font-size: 36px
-  line-height: 42px
-
-  color: #e5e5e5
-
-  &_wrapper
-    background-color: rgba(0, 0, 0, 0.6)
-
-  &_container
-    @include section-width
-    padding-block: 15px
 
 .hero_content
   display: flex
   align-items: center
-  // flex-wrap: wrap
   gap: 100px
 
-  max-width: 1220px
+  max-width: 1440px
   padding-inline: 50px
   margin: 0 auto
 
 .hero_content_text
-  // max-width: 50%
-
   font-weight: 100
   font-size: 4.5rem
   line-height: 1.1em
@@ -63,9 +48,7 @@
 
 .about
   @include section-width
-  // padding-block: 145px 115px
   padding-block: 7.5% 6%
-  // padding-inline: 250px
 
   &__header
     margin-bottom: 30px
@@ -94,9 +77,7 @@
       margin-bottom: 24px
 
 .features
-  // padding-inline: 250px
   @include section-width
-  // padding-block: 70px 100px
   padding-block: 3.5% 5%
 
   color: #fff
@@ -132,25 +113,6 @@
 
     @include from(laptop)
       width: 25%
-
-  // &__button
-  //   border: 1px solid #fff
-  //   border-radius: 5px
-  //   padding: 15px 75px
-
-  //   font-weight: 700
-  //   font-size: 24px
-  //   line-height: 28px
-  //   text-align: center
-  //   color: $white
-
-  //   cursor: pointer
-  //   transition-duration: 0.3s
-
-  //   &:hover
-  //     border-color: $orange-pale-3
-  //     background-color: $orange-pale-3
-  //     color: $grey-dark-2
 
 .feature__icon
   & circle
@@ -195,7 +157,6 @@
   text-align: left
 
 .reviews
-  // padding-block: 150px 120px
   padding-block: 8% 6.25%
 
 .review
