--- a/src/components/SearchTicketsForm/style.sass
+++ b/src/components/SearchTicketsForm/style.sass
@@ -29,7 +29,7 @@
     .tickets__form_block
       flex: 1
 
-.tickets__form_header
+h4.tickets__form_header
   margin-bottom: 15px
   font-weight: 300
   font-size: 30px
@@ -60,6 +60,10 @@
   background: #F5F4F6
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
   border-radius: 3px
+
+.city-select__no-items
+  font-size: 1.125rem
+  color: #292929
 
 .city-select__item
 
